--- a/LojaRoupas/package.json
+++ b/LojaRoupas/package.json
@@ -8,7 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/jost": "^0.2.2",
+    "@expo-google-fonts/lobster": "^0.2.2",
     "@expo-google-fonts/montserrat": "^0.2.2",
+    "@expo-google-fonts/righteous": "^0.2.2",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
